vlib/v/checker/tests/const_field_dec_err.out
vlib/v/checker/tests/const_field_dec_err.vv:4:2: error: cannot modify constant `a`
    2 | 
    3 | fn main() {
    4 |     a--
      |     ^
    5 | }
